# Aurora---Autonomous-Mobile-Robot

./: .gitignore  CLAUDE.md  PROJECT_REPORT.md  README.md
.antigravitycli/: 3d712638-cb74-482d-a68d-1a8381e89473.json
docker/: Dockerfile  run_sim.sh
docs/: Electrical.md  STUDY_PLAN.md  context_prompt.md  context_prompt_phase10.md  project_log.md  software_stack.md
docs/study/: A1_electricity_gpio_embedded_basics.md
docs/superpowers/plans/: 2026-05-17-amr-implementation-plan.md  2026-06-11-explore-resilience-and-resume.md  2026-06-17-gazebo-simulation.md
docs/superpowers/specs/: 2026-05-17-amr-system-design.md  2026-06-11-explore-resilience-and-resume-design.md  2026-06-17-gazebo-simulation-design.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/ism330dhcx/: CMakeLists.txt  ism330dhcx.c
firmware/components/ism330dhcx/include/: ism330dhcx.h
firmware/components/serial_protocol/: CMakeLists.txt  serial_protocol.c
firmware/components/serial_protocol/include/: serial_protocol.h
firmware/components/serial_protocol/test/: CMakeLists.txt  test_serial_protocol.c
firmware/components/serial_protocol/test/main/: CMakeLists.txt  test_app_main.c
firmware/components/vl53l5cx/: CMakeLists.txt  vl53l5cx_drv.c  vl53l5cx_platform.c
firmware/components/vl53l5cx/include/: vl53l5cx_drv.h
firmware/components/vl53l5cx/st_uld/: vl53l5cx_api.c  vl53l5cx_api.h  vl53l5cx_platform.h
firmware/main/: CMakeLists.txt  encoder.c  encoder.h  main.c  motor.c  motor.h  pid.c  pid.h  shared_state.h
firmware/main/tasks/: task_encoder_read.c  task_encoder_read.h  task_imu_read.c  task_imu_read.h  task_pid_control.c  task_pid_control.h  task_serial_comms.c  task_serial_comms.h  task_tof_read.c  task_tof_read.h
firmware/tools/: verify_serial.py
ros2_ws/src/amr_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/amr_bringup/config/: controllers.yaml
ros2_ws/src/amr_bringup/launch/: amr.launch.py  explore_map.launch.py  hardware.launch.py  odom_test.launch.py  sim.launch.py  teleop_map.launch.py
ros2_ws/src/amr_bringup/rviz/: sim.rviz
ros2_ws/src/amr_bringup/scripts/: twist_to_reference.py
ros2_ws/src/amr_description/: CMakeLists.txt  package.xml
ros2_ws/src/amr_description/launch/: view_robot.launch.py
ros2_ws/src/amr_description/urdf/: amr.urdf.xacro  sensors.urdf.xacro  wheels.urdf.xacro
ros2_ws/src/amr_description/worlds/: warehouse.sdf
ros2_ws/src/amr_explore/: CMakeLists.txt  package.xml
ros2_ws/src/amr_explore/config/: explore.yaml
ros2_ws/src/amr_explore/launch/: explore.launch.py
ros2_ws/src/amr_hardware/: CMakeLists.txt  amr_hardware.xml  package.xml
ros2_ws/src/amr_hardware/include/amr_hardware/: amr_hardware_interface.hpp  serial_driver.hpp
ros2_ws/src/amr_hardware/src/: amr_hardware_interface.cpp  serial_driver.cpp
ros2_ws/src/amr_home_manager/: package.xml  setup.cfg  setup.py
ros2_ws/src/amr_home_manager/amr_home_manager/: home_manager_node.py
ros2_ws/src/amr_home_manager/launch/: home_manager.launch.py
ros2_ws/src/amr_home_manager/test/: test_home_manager.py
ros2_ws/src/amr_imu/: package.xml  setup.cfg  setup.py
ros2_ws/src/amr_imu/amr_imu/: cmd_vel_safe_relay.py  imu_sensor_node.py
ros2_ws/src/amr_imu/launch/: imu.launch.py
ros2_ws/src/amr_nav/: CMakeLists.txt  package.xml
ros2_ws/src/amr_nav/config/: collision_monitor.yaml  nav2_params.yaml
ros2_ws/src/amr_nav/launch/: nav2.launch.py
ros2_ws/src/amr_sensor_fusion/: CMakeLists.txt  package.xml
ros2_ws/src/amr_sensor_fusion/config/: ekf.yaml  imu_filter.yaml
ros2_ws/src/amr_sensor_fusion/launch/: sensor_fusion.launch.py
ros2_ws/src/amr_slam/: CMakeLists.txt  package.xml
ros2_ws/src/amr_slam/config/: slam_toolbox.yaml
ros2_ws/src/amr_slam/launch/: slam.launch.py
scripts/: demo.sh  demo_sim.sh  deploy.sh  record_demo.sh  setup_espidf.sh  setup_rpi5.sh
scripts/udev/: 99-amr.rules
teleop/: README.md  teleop.py  teleop_simple.py
tools/: imu_raw_data.py  imu_spi_check.py  map_cleaner.py
