<?xml version="1.0"?>
<package format="3">
  <name>amr_description</name>
  <version>0.1.0</version>
  <description>AMR URDF, sensor frames, and Gazebo world</description>
  <maintainer email="khatrishubham030@gmail.com">Shubham</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <ament_cmake>
    <export/>
  </ament_cmake>
</package>
