<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_home_manager</name>
  <version>0.1.0</version>
  <description>State machine for autonomous exploration and home return</description>
  <maintainer email="mohammedrah1289@gmail.com">Mohammed Rayan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>explore_lite_msgs</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
