<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_sensor_fusion</name>
  <version>0.1.0</version>
  <description>EKF-based sensor fusion — wheel odometry + IMU → /odom</description>
  <maintainer email="vybhav2315@gmail.com">Mohammed</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
