<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_slam</name>
  <version>0.1.0</version>
  <description>SLAM configuration using slam_toolbox online_async mode</description>
  <maintainer email="mohammedrah1289@gmail.com">Mohammed Rayan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
